# EffekseerForMultiLanguages

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README  README.md
.github/workflows/: build.yml
examples/: build_libGtxSample.py  libGtxSample.bat
examples/libGdxSample/: build.gradle
examples/libGdxSample/core/: build.gradle
examples/libGdxSample/core/assets/: Laser01.efkefc  Simple.efkefc  readme.txt
examples/libGdxSample/core/libs/: readme.txt
examples/libGdxSample/core/src/com/mygdx/game/: libGdxSample.java
examples/libGdxSample/desktop/: build.gradle
examples/libGdxSample/desktop/src/com/mygdx/game/desktop/: DesktopLauncher.java
src/: CMakeLists.txt  EffekseerCore.i  generate_maven_artifacts.sh  generate_swig_wrapper.bat  generate_swig_wrapper.sh
src/cpp/: CMakeLists.txt
src/cpp/Core/: CMakeLists.txt  EffekseerBackendCore.cpp  EffekseerBackendCore.h  EffekseerEffectCore.cpp  EffekseerEffectCore.h  EffekseerManagerCore.cpp  EffekseerManagerCore.h
src/cpp/csharp/: dll.cpp
src/cpp/java/: dll.cpp
src/cpp/python/: dll.cpp
src/csharp/swig/: EffekseerBackendCore.cs  EffekseerCore.cs  EffekseerCoreDeviceType.cs  EffekseerCorePINVOKE.cs  EffekseerEffectCore.cs  EffekseerManagerCore.cs  EffekseerTextureType.cs
src/java/: build.xml
src/java/swig/: EffekseerBackendCore.java  EffekseerCore.java  EffekseerCoreDeviceType.java  EffekseerCoreJNI.java  EffekseerEffectCore.java  EffekseerManagerCore.java  EffekseerTextureType.java
src/python/swig/: EffekseerCore.py
src/swig/Lib/python/: char16.i
